# testsearch

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  benchmark.py  default.nix  flake.nix  main.py  mise.toml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  shell.nix  testsearch.py
pytest-testsearch/: Cargo.toml  pyproject.toml
pytest-testsearch/src/: lib.rs
src/: main.rs
tests/: test_localstack_comparison.py  tests.json
testsearch/: Cargo.toml
testsearch-core/: Cargo.toml
testsearch-core/src/: lib.rs  main.rs
testsearch/src/: main.rs
