[package]
name = "testsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
color-eyre = "0.6.3"
ignore = "0.4.23"
rayon = "1.10.0"
skim = "0.10.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tree-sitter = "0.23.2"
tree-sitter-python = "0.23.2"
