[package]
name = "testsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
tracing.workspace = true
serde_json.workspace = true
skim.workspace = true
rayon.workspace = true

testsearch-core = { path = "../testsearch-core" }
